@@ -15,6 +15,7 @@
 	</parent>
 	<properties>
 		<maven.compiler.release>21</maven.compiler.release>
+		<maven.compiler.enablePreview>true</maven.compiler.enablePreview>
 		<module.name>nima.example</module.name>
 	</properties>
 	<dependencies>
@@ -22,7 +23,6 @@
 			<groupId>io.avaje</groupId>
 			<artifactId>avaje-nima</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>io.avaje</groupId>
 			<artifactId>avaje-nima-generator</artifactId>
@@ -69,17 +69,6 @@
 				</configuration>
 			</plugin>
 			<!-- Create the Runnable Jar with dependencies -->
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.13.0</version>
-				<configuration>
-					<compilerArgs>
-						<arg>--enable-preview</arg>
-					</compilerArgs>
-				</configuration>
-			</plugin>
 
 			<plugin>
 				<groupId>io.avaje</groupId>
